test_files/nohup.out
Initializing built-in extension Generic Event Extension
Initializing built-in extension SHAPE
Initializing built-in extension MIT-SHM
Initializing built-in extension XInputExtension
Initializing built-in extension XTEST
Initializing built-in extension BIG-REQUESTS
Initializing built-in extension SYNC
Initializing built-in extension XKEYBOARD
Initializing built-in extension XC-MISC
Initializing built-in extension SECURITY
Initializing built-in extension XINERAMA
Initializing built-in extension XFIXES
Initializing built-in extension RENDER
Initializing built-in extension RANDR
Initializing built-in extension COMPOSITE
Initializing built-in extension DAMAGE
Initializing built-in extension MIT-SCREEN-SAVER
Initializing built-in extension DOUBLE-BUFFER
Initializing built-in extension RECORD
Initializing built-in extension DPMS
Initializing built-in extension Present
Initializing built-in extension X-Resource
Initializing built-in extension XVideo
Initializing built-in extension XVideo-MotionCompensation
Initializing built-in extension SELinux
Initializing built-in extension GLX
http://:::80
listening on port 443!
connected as id 162
google 有資料
http://:::80
listening on port 443!
connected as id 163
google 有資料
connected as id 163
connected as id 163
connected as id 163
connected as id 163
connected as id 163
connected as id 163
connected as id 163
connected as id 163
google 有資料
connected as id 163
connected as id 163
connected as id 163
http://:::80
listening on port 443!
connected as id 164
connected as id 164
connected as id 164
http://:::80
listening on port 443!
connected as id 165
connected as id 165
listening on port 443!
connected as id 175
listening on port 443!
connected as id 176
[Object: null prototype] { email: "' or 1=1 /*", password: '11', commit: 'Login' }
{ error: 'Add user_data Error' }
/root/project/node_modules/mysql/lib/protocol/Parser.js:80
        throw err; // Rethrow non-MySQL errors
        ^

Error: ER_PARSE_ERROR: You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near '/*'' at line 1
    at Query.Sequence._packetToError (/root/project/node_modules/mysql/lib/protocol/sequences/Sequence.js:47:14)
    at Query.ErrorPacket (/root/project/node_modules/mysql/lib/protocol/sequences/Query.js:77:18)
    at Protocol._parsePacket (/root/project/node_modules/mysql/lib/protocol/Protocol.js:278:23)
    at Parser.write (/root/project/node_modules/mysql/lib/protocol/Parser.js:76:12)
    at Protocol.write (/root/project/node_modules/mysql/lib/protocol/Protocol.js:38:16)
    at Socket.<anonymous> (/root/project/node_modules/mysql/lib/Connection.js:91:28)
    at Socket.<anonymous> (/root/project/node_modules/mysql/lib/Connection.js:502:10)
    at Socket.emit (events.js:188:13)
    at Socket.EventEmitter.emit (domain.js:439:20)
    at addChunk (_stream_readable.js:288:12)
    --------------------
    at Protocol._enqueue (/root/project/node_modules/mysql/lib/protocol/Protocol.js:144:48)
    at PoolConnection.query (/root/project/node_modules/mysql/lib/Connection.js:200:25)
    at /root/project/routes/member.js:85:18
    at Ping.onOperationComplete (/root/project/node_modules/mysql/lib/Pool.js:110:5)
    at Ping.<anonymous> (/root/project/node_modules/mysql/lib/Connection.js:502:10)
    at Ping._callback (/root/project/node_modules/mysql/lib/Connection.js:468:16)
    at Ping.Sequence.end (/root/project/node_modules/mysql/lib/protocol/sequences/Sequence.js:83:24)
    at Ping.Sequence.OkPacket (/root/project/node_modules/mysql/lib/protocol/sequences/Sequence.js:92:8)
    at Protocol._parsePacket (/root/project/node_modules/mysql/lib/protocol/Protocol.js:278:23)
    at Parser.write (/root/project/node_modules/mysql/lib/protocol/Parser.js:76:12)
listening on port 443!
connected as id 177
connected as id 177
listening on port 443!
connected as id 178
[Object: null prototype] { email: "' or 1=1 /*", password: '11', commit: 'Login' }
{ error: 'Add user_data Error' }
/root/project/node_modules/mysql/lib/protocol/Parser.js:80
        throw err; // Rethrow non-MySQL errors
        ^

Error: ER_PARSE_ERROR: You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near '/*'' at line 1
    at Query.Sequence._packetToError (/root/project/node_modules/mysql/lib/protocol/sequences/Sequence.js:47:14)
    at Query.ErrorPacket (/root/project/node_modules/mysql/lib/protocol/sequences/Query.js:77:18)
    at Protocol._parsePacket (/root/project/node_modules/mysql/lib/protocol/Protocol.js:278:23)
    at Parser.write (/root/project/node_modules/mysql/lib/protocol/Parser.js:76:12)
    at Protocol.write (/root/project/node_modules/mysql/lib/protocol/Protocol.js:38:16)
    at Socket.<anonymous> (/root/project/node_modules/mysql/lib/Connection.js:91:28)
    at Socket.<anonymous> (/root/project/node_modules/mysql/lib/Connection.js:502:10)
    at Socket.emit (events.js:188:13)
    at Socket.EventEmitter.emit (domain.js:439:20)
    at addChunk (_stream_readable.js:288:12)
    --------------------
    at Protocol._enqueue (/root/project/node_modules/mysql/lib/protocol/Protocol.js:144:48)
    at PoolConnection.query (/root/project/node_modules/mysql/lib/Connection.js:200:25)
    at /root/project/routes/member.js:85:18
    at Ping.onOperationComplete (/root/project/node_modules/mysql/lib/Pool.js:110:5)
    at Ping.<anonymous> (/root/project/node_modules/mysql/lib/Connection.js:502:10)
    at Ping._callback (/root/project/node_modules/mysql/lib/Connection.js:468:16)
    at Ping.Sequence.end (/root/project/node_modules/mysql/lib/protocol/sequences/Sequence.js:83:24)
    at Ping.Sequence.OkPacket (/root/project/node_modules/mysql/lib/protocol/sequences/Sequence.js:92:8)
    at Protocol._parsePacket (/root/project/node_modules/mysql/lib/protocol/Protocol.js:278:23)
    at Parser.write (/root/project/node_modules/mysql/lib/protocol/Parser.js:76:12)
(EE) 
Fatal server error:
(EE) Server is already active for display 99
	If this server is no longer running, remove /tmp/.X99-lock
	and start again.
(EE) 
